--- a/Terminal Notifier/Terminal Notifier-Info.plist
+++ b/Terminal Notifier/Terminal Notifier-Info.plist
@@ -7,13 +7,13 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
-	<string>Terminal</string>
+	<string>HipChat</string>
 	<key>CFBundleIdentifier</key>
-	<string>nl.superalloy.oss.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>nl.superalloy.oss.${HIPCHAT:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>${PRODUCT_NAME}</string>
+	<string>HIPCHAT</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
@@ -21,7 +21,7 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>16</string>
+	<string>17</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>${MACOSX_DEPLOYMENT_TARGET}</string>
 	<key>LSUIElement</key>
